--- a/demo/qmdpAdmin/_userpro.html
+++ b/demo/qmdpAdmin/_userpro.html
@@ -127,7 +127,7 @@ Purchase: http://wrapbootstrap.com
         </div>
         <div>
             <ul class="nav navbar-nav">
-                <li class="active"><a href="#">首页</a></li>
+                <li class="active"><a href="_index.html">首页</a></li>
                 <li><a href="#">关于我们</a></li>
                 <li><a href="#">当铺商城</a></li>
             </ul>
@@ -173,8 +173,8 @@ Purchase: http://wrapbootstrap.com
                 <div class="row well well-detail">
                     <div class="row well no-padding">
                         <div class="col-lg-3 col-md-3 col-sm-6 no-padding">
-                            <img src="assets/img/avatars/John-Smith.jpg" width=200
-                                 height=200/>
+                            <img src="assets/img/avatars/John-Smith.jpg" width=180
+                                 height=180/>
                         </div>
                         <div class="col-lg-5 col-md-5 col-sm-6 padding-20">
                             <div class="proname">项目名称</div>
