--- a/demo/qmdpAdmin/_shopindex.html
+++ b/demo/qmdpAdmin/_shopindex.html
@@ -170,7 +170,7 @@ Purchase: http://wrapbootstrap.com
                         <b class="caret"></b>
                     </a>
                     <ul class="dropdown-menu">
-                        <li><a href="#">长安街当铺</a></li>
+                        <li><a href="_shop.html">长安街当铺</a></li>
                         <li><a href="#">春熙路当铺</a></li>
                     </ul>
                 </li>
