--- a/demo/qmdpAdmin/_lowerarch.html
+++ b/demo/qmdpAdmin/_lowerarch.html
@@ -159,7 +159,7 @@ Purchase: http://wrapbootstrap.com
             </div>
             <div class="col-lg-9 col-md-9 col-sm-9 col-xs-8">
                 <div class="row well well-detail no-margin no-padding">
-                    <div class="row no-margin padding-20">金额合计：￥500,000</div>
+                    <div class="row no-margin padding-20 text-align-right font-130">金额合计：￥<span>500,000</span></div>
                     <div class="row no-margin">
                         <div class="">
                             <ul class="nav nav-tabs" id="myTab">
