--- a/demo/qmdpAdmin/_proset.html
+++ b/demo/qmdpAdmin/_proset.html
@@ -1,7 +1,4 @@
-﻿<?php
-defined('BASEPATH') OR exit('No direct script access allowed');
-?>
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <!--
 BeyondAdmin - Responsive Admin Dashboard Template build with Twitter Bootstrap 3.2.0
 Version: 1.0.0
